# Disk-Utilities

./: .gitignore  CMakeLists.txt  Makefile  README.md  uninstall.cmake
.github/workflows/: BuildTest.yml
disk-analyse/: CMakeLists.txt  Makefile  formats
libdisk/: CMakeLists.txt  Makefile  disk.c  util.c
libdisk/container/: ipf.c  scp.c
libdisk/endian/: endian.h  unistd.h
libdisk/format/: ibm.c
libdisk/include/libdisk/: track_types.h  util.h
libdisk/include/private/: util.h
libdisk/stream/: stream.c
